# gsa-4-to-5

./: .gitignore  build.sbt  gsa4to5.cabal  run.sh
app/: Main.hs
app/src/main/scala/net/gsarchives/gsa4to5/: App.scala
lib/: build.sbt
lib/GSA/FourToFive/: Sprites.hs
lib/GSA/FourToFive/Sprites/: Main.hs  Options.hs
lib/src/main/scala/net/gsarchives/gsa4to5/: output.scala  parser.scala
lib/src/test/resources/: output.yaml
lib/src/test/resources/input/custom/: index
lib/src/test/resources/input/custom/nemo/sprites/: index
lib/src/test/resources/input/custom/omegajester/: index
lib/src/test/resources/input/custom/omegajester/sprites/: index
lib/src/test/resources/input/custom/prowler/: index
lib/src/test/resources/input/custom/prowler/sprites/: index
lib/src/test/resources/input/custom/purplebuttboid/: index
lib/src/test/resources/input/custom/purplebuttboid/sprites/: index
lib/src/test/resources/input/custom/sketch/sprites/: index
lib/src/test/resources/input/custom/space-cadet/: index
lib/src/test/resources/input/custom/space-cadet/sprites/: index
lib/src/test/resources/input/custom/ukyo_of_the_shadow/: index
lib/src/test/resources/input/custom/ukyo_of_the_shadow/sprites/: index
test/: Main.hs
test/GSA/FourToFive/Sprites/Options/: Test.hs
